--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -4,7 +4,8 @@
       &copy; Copyright {{ site.time | date: '%Y' }}
       {{ site.first_name }}
       {{ site.middle_name }}
-      {{ site.last_name }} {{ site.suffix }}. {{ site.footer_text }}
+      {{ site.last_name }}
+      {{ site.suffix }}. {{ site.footer_text }}
       {% if site.impressum_path %}
         <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
       {% endif %}
@@ -19,7 +20,8 @@
       &copy; Copyright {{ site.time | date: '%Y' }}
       {{ site.first_name }}
       {{ site.middle_name }}
-      {{ site.last_name }} {{ site.suffix }}. {{ site.footer_text }}
+      {{ site.last_name }}
+      {{ site.suffix }}. {{ site.footer_text }}
       {% if site.impressum_path %}
         <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
       {% endif %}
