--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -2,80 +2,87 @@
 layout: default
 ---
 <div class="post">
-  {% if page.profile.align != "center" -%}
-  <header class="post-header">
-    <h1 class="post-title">
-      {% if site.title == 'blank' %}
-        <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
-        {{ site.last_name }} {{ site.suffix }}
-      {% else %}
-        {{ site.title }}
-      {% endif %}
-    </h1>
-    <p class="desc">{{ page.subtitle }}</p>
-  </header>
+  {% if page.profile.align != 'center' -%}
+    <header class="post-header">
+      <h1 class="post-title">
+        {% if site.title == 'blank' %}
+          <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
+          {{ site.last_name }}
+          {{ site.suffix }}
+        {% else %}
+          {{ site.title }}
+        {% endif %}
+      </h1>
+      <p class="desc">{{ page.subtitle }}</p>
+    </header>
   {% endif %}
 
   <article>
     {% if page.profile %}
-        {% if page.profile.align == "center" -%}
-            <div class="profile center justify-content-center">
-                {%- if page.profile.image %}
-                    {%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
+      {% if page.profile.align == 'center' -%}
+        <div class="profile center justify-content-center">
+          {%- if page.profile.image %}
+            {%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
 
-                    {% if page.profile.image_circular %}
-                        {%- assign profile_image_class = "img-fluid z-depth-1 rounded-circle" -%}
-                    {% else %}
-                        {%- assign profile_image_class = "img-fluid z-depth-1 rounded" -%}
-                    {% endif %}
+            {% if page.profile.image_circular %}
+              {%- assign profile_image_class = 'img-fluid z-depth-1 rounded-circle' -%}
+            {% else %}
+              {%- assign profile_image_class = 'img-fluid z-depth-1 rounded' -%}
+            {% endif %}
 
-                    {% include figure.liquid
-                        path=profile_image_path
-                        class=profile_image_class
-                        alt=page.profile.image -%}
-                {% endif -%}
-                <!-- Text -->
-                <div class="header" style="margin-bottom: 1rem;">
-                    {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{
-                    site.middle_name }} {{ site.last_name }} {{ site.suffix }}{%- else -%}{{ site.title }}{%- endif %}
-                    {%- if page.profile.address %}
-                        <div class="address" style="font-size: large;">
-                            {{ page.profile.address }}
-                        </div>
-                    {%- endif %}
-                    <!-- Social -->
-                    <div class="contact-icons">
-                        {% include social.liquid %}
-                    </div>
-
-                    <div class="contact-note">
-                        {{ site.contact_note }}
-
-                    </div>
-                </div>
+            {%
+              include figure.liquid
+              path=profile_image_path
+              class=profile_image_class
+              alt=page.profile.image
+            -%}
+          {% endif -%}
+          <!-- Text -->
+          <div class="header" style="margin-bottom: 1rem;">
+            {% if site.title == 'blank' -%}
+              <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
+              {{ site.last_name }}
+              {{ site.suffix }}
+            {%- else -%}
+              {{ site.title }}
+            {%- endif %}
+            {%- if page.profile.address %}
+              <div class="address" style="font-size: large;">
+                {{ page.profile.address }}
+              </div>
+            {%- endif %}
+            <!-- Social -->
+            <div class="contact-icons">
+              {% include social.liquid %}
             </div>
-        {% else -%}
-            <div class="profile float-{% if page.profile.align == 'left' %}left{% else %}right{% endif %}">
-                {% if page.profile.image %}
-                {% assign profile_image_path = page.profile.image | prepend: 'assets/img/' %}
-                {% if page.profile.image_circular %}
-                    {% assign profile_image_class = 'img-fluid z-depth-1 rounded-circle' %}
-                {% else %}
-                    {% assign profile_image_class = 'img-fluid z-depth-1
+
+            <div class="contact-note">
+              {{ site.contact_note }}
+            </div>
+          </div>
+        </div>
+      {% else -%}
+        <div class="profile float-{% if page.profile.align == 'left' %}left{% else %}right{% endif %}">
+          {% if page.profile.image %}
+            {% assign profile_image_path = page.profile.image | prepend: 'assets/img/' %}
+            {% if page.profile.image_circular %}
+              {% assign profile_image_class = 'img-fluid z-depth-1 rounded-circle' %}
+            {% else %}
+              {% assign profile_image_class = 'img-fluid z-depth-1
             rounded' %}
-                {% endif %}
-                {% capture sizes %}(min-width: {{site.max_width}}) {{ site.max_width | minus: 30 | times: 0.3}}px, (min-width: 576px)
+            {% endif %}
+            {% capture sizes %}(min-width: {{site.max_width}}) {{ site.max_width | minus: 30 | times: 0.3}}px, (min-width: 576px)
             30vw, 95vw"{% endcapture %}
-                {%
-                    include figure.liquid path = profile_image_path class = profile_image_class sizes = sizes alt = page.profile.image
-                    cache_bust = true
-                %}
-                {% endif %}
-                {% if page.profile.more_info %}
-                <div class="more-info">{{ page.profile.more_info }}</div>
-                {% endif %}
-            </div>
-        {% endif %}
+            {%
+              include figure.liquid path = profile_image_path class = profile_image_class sizes = sizes alt = page.profile.image
+              cache_bust = true
+            %}
+          {% endif %}
+          {% if page.profile.more_info %}
+            <div class="more-info">{{ page.profile.more_info }}</div>
+          {% endif %}
+        </div>
+      {% endif %}
     {% endif %}
 
     <div class="clearfix">{{ content }}</div>
@@ -89,7 +96,7 @@ layout: default
     {% endif %}
 
     <!-- Latest posts -->
-    {% if site.latest_posts.enabled  %}
+    {% if site.latest_posts.enabled %}
       <h2>
         <a href="{{ '/blog/' | relative_url }}" style="color: inherit">latest posts</a>
       </h2>
