--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,31 +4,31 @@
  ******************************************************************************/
 
 // Colors
-$red-color:           #FF3636 !default;
-$red-color-dark:      #B71C1C !default;
-$dark-red-color:    #8c1515 !default;
+$red-color: #ff3636 !default;
+$red-color-dark: #b71c1c !default;
+$dark-red-color: #8c1515 !default;
 // $dark-red-color:    #cc002c !default;
-$orange-color:        #F29105 !default;
-$blue-color:          #0076df !default;
-$blue-color-dark:     #00369f !default;
-$cool-blue-color:     #332faf !default;
-$ocean-blue:          #2B65EC !default;
-$ocean-blue-2:        #4576e8 !default;
-$cyan-color:          #2698BA !default;
-$light-cyan-color:    lighten($cyan-color, 25%);
-$green-color:         #00ab37 !default;
-$green-color-lime:    #B7D12A !default;
-$green-color-dark:    #009f06 !default;
-$green-color-light:   #ddffdd !default;
-$green-color-bright:  #11D68B !default;
-$cool-green-color:    #237b5c !default;
-$purple-color:        #8d12bd !default;
-$light-purple:        #8f58ab !default;
-$light-purple-2:      #9961b4 !default;
-$light-purple-color:  lighten($purple-color, 25%);
-$pink-color:          #f92080 !default;
-$pink-color-light:    #ffdddd !default;
-$yellow-color:        #efcc00 !default;
+$orange-color: #f29105 !default;
+$blue-color: #0076df !default;
+$blue-color-dark: #00369f !default;
+$cool-blue-color: #332faf !default;
+$ocean-blue: #2b65ec !default;
+$ocean-blue-2: #4576e8 !default;
+$cyan-color: #2698ba !default;
+$light-cyan-color: lighten($cyan-color, 25%);
+$green-color: #00ab37 !default;
+$green-color-lime: #b7d12a !default;
+$green-color-dark: #009f06 !default;
+$green-color-light: #ddffdd !default;
+$green-color-bright: #11d68b !default;
+$cool-green-color: #237b5c !default;
+$purple-color: #8d12bd !default;
+$light-purple: #8f58ab !default;
+$light-purple-2: #9961b4 !default;
+$light-purple-color: lighten($purple-color, 25%);
+$pink-color: #f92080 !default;
+$pink-color-light: #ffdddd !default;
+$yellow-color: #efcc00 !default;
 
 $grey-color: #828282 !default;
 $grey-color-light: lighten($grey-color, 40%);
@@ -38,7 +38,6 @@ $grey-900: #212529;
 $white-color: #ffffff !default;
 // $white-color: #f2f0fc !default;
 $black-color: #000000 !default;
-
 
 // CMU Colors
 // https://www.cmu.edu/brand/brand-guidelines/visual-identity/colors.html
@@ -57,7 +56,6 @@ $nyu-violet: #57068c !default;
 $nyu-deep-violet: #330662 !default;
 $nyu-teal: #009b8a !default;
 
-
 // $dark-blue: #20007F !default;
 // $dark-blue: rgb(32, 48, 128) !default;
 // $dark-blue: rgb(48, 32, 128) !default;
@@ -65,9 +63,8 @@ $dark-blue: rgb(48, 32, 151) !default;
 
 // Theme colors
 
-$code-bg-color-light:     rgba($purple-color, 0.05);
-$code-bg-color-dark:      #2c3237 !default;
-
+$code-bg-color-light: rgba($purple-color, 0.05);
+$code-bg-color-dark: #2c3237 !default;
 
 // $theme-color-light:             $purple-color;
 // $theme-color-light:             $red-color-dark;
@@ -75,18 +72,17 @@ $code-bg-color-dark:      #2c3237 !default;
 // $theme-color-light:             $cool-blue-color;
 // $theme-color-light:             $dark-red-color;
 // $theme-color-light:             $cmu-skibo-red;
-$theme-color-light:             $dark-blue !default;
+$theme-color-light: $dark-blue !default;
 
 // $theme-color-dark:              $cyan-color;
 // $theme-color-dark:              $cmu-palladian-green;
 // $theme-color-dark:              $ocean-blue-2;
 // $theme-color-dark:              #2391ff !default;
-$theme-color-dark:              rgb(48, 128, 255) !default;
+$theme-color-dark: rgb(48, 128, 255) !default;
 
-$theme-bg-color-light:          $white-color;
+$theme-bg-color-light: $white-color;
 // $theme-bg-color-dark:           $grey-color-dark;
-$theme-bg-color-dark:         #16181d !default;
-
+$theme-bg-color-dark: #16181d !default;
 
 // https://colorhunt.co/palettes/cold
 
