--- a/_includes/figure.liquid
+++ b/_includes/figure.liquid
@@ -11,7 +11,18 @@
       See https://www.debugbear.com/blog/responsive-images#w-descriptors-and-the-sizes-attribute and
       https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Responsive_images for info on defining 'sizes' for responsive images
     -->
-    {% if site.imagemagick.enabled %}
+    {% if include.path contains '.webp' %}
+      <source
+        class="responsive-img-srcset"
+        srcset="{{ img_path | relative_url }}"
+        {% if include.sizes %}
+          sizes="{{include.sizes}}"
+        {% else %}
+          sizes="95vw"
+        {% endif %}
+        type="image/webp"
+      >
+    {% else if site.imagemagick.enabled %}
       <source
         class="responsive-img-srcset"
         srcset="{% for i in site.imagemagick.widths %}{{ img_path | relative_url }}-{{ i }}.webp {{i}}w,{% endfor %}"
