--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -74,10 +74,10 @@
           {% if forloop.last and author_array_limit == author_array_size %}and&nbsp;{% endif %}
         {% endif %}
         {% if author_is_self %}
-          <em>
+          <strong>
             {{- author.first }}
             {{ author.last -}}
-          </em>
+          </strong>
         {% else %}
           {% if coauthor_url %}
             <a href="{{coauthor_url}}">
@@ -85,8 +85,8 @@
               {{ author.last -}}
             </a>
           {% else %}
-            {{ author.first }}
-            {{ author.last }}
+            {{- author.first }}
+            {{ author.last-}}
           {% endif %}
         {% endif %}
       {% endfor %}
