--- a/_includes/research.liquid
+++ b/_includes/research.liquid
@@ -1,5 +1,5 @@
 <div class="publications">
-  <h2>selected research <a href="/research">(more)</a></h2>
+  <h2>selected research <a href="/research">(all)</a></h2>
 
   {% assign research-page = site.pages | where: 'title', 'research' | first %}
   {%- if research-page.interests %}
