--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -880,7 +880,8 @@ footer.sticky-bottom {
           }
         }
         a.award.btn {
-          border-color: var(--global-highlight-color);
+          border-color: var(--global-highlight-color-light);
+          background-color: var(--global-highlight-color-light) !important;
         }
       }
 
