--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,6 +8,7 @@
 // Colors
 $red-color: #ff3636 !default;
 $red-color-dark: #b71c1c !default;
+$red-color-light: #f973732d !default;
 $dark-red-color: #8c1515 !default;
 // $dark-red-color:    #cc002c !default;
 $orange-color: #f29105 !default;
@@ -24,7 +25,7 @@ $green-color-dark: #009f06 !default;
 $green-color-light: #ddffdd !default;
 $green-color-bright: #11d68b !default;
 $cool-green-color: #237b5c !default;
-$purple-color-1: #8d12bd !default;
+$purple-color: #8d12bd !default;
 $light-purple: #8f58ab !default;
 $light-purple-2: #9961b4 !default;
 $light-purple-color: lighten($purple-color, 25%);
