--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -16,9 +16,9 @@
             {% endif -%}
           >
             {% if site.data.venues[entry.abbr].url %}
-              <a href="{{ site.data.venues[entry.abbr].url }}">{{ entry.abbr }}</a>
+              <a href="{{ site.data.venues[entry.abbr].url }}">{{- entry.abbr -}}</a>
             {% else %}
-              <div>{{- entry.abbr -}}</div>
+              {{- entry.abbr -}}
             {% endif %}
           </abbr>
         {% else %}
