--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -211,6 +211,10 @@ ul.task-list input[type="checkbox"] {
       margin: auto;
     }
   }
+
+  .title {
+    font-size: medium;
+  }
 }
 
 .profile.center {
