--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="post">
-  {% if page.profile.align != 'center' -%}
+  {% if page.profile.align != 'center' and page.profile.align != 'left-box' -%}
     <header class="post-header">
       <h1 class="post-title">
         {% if site.title == 'blank' %}
@@ -39,13 +39,16 @@ layout: default
           {% endif -%}
           <!-- Text -->
           <div class="header" style="margin-bottom: 1rem;">
-            {% if site.title == 'blank' -%}
-              <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
-              {{ site.last_name }}
-              {{ site.suffix }}
-            {%- else -%}
-              {{ site.title }}
-            {%- endif %}
+            <div class="name">
+              {% if site.title == 'blank' -%}
+                <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
+                {{ site.last_name }}
+                {{ site.suffix }}
+                </div>
+              {%- else -%}
+                {{ site.title }}
+              {%- endif %}
+            </div>
             {%- if page.profile.title %}
               <div class="title">
                 {{ page.profile.title }}
@@ -63,6 +66,41 @@ layout: default
 
             <div class="contact-note">
               {{ site.contact_note }}
+            </div>
+          </div>
+        </div>
+      {% elsif page.profile.align == 'left-box' -%}
+        <div class="profile left-box">
+          {% if page.profile.image %}
+            {% assign profile_image_path = page.profile.image | prepend: 'assets/img/' %}
+            {% if page.profile.image_circular %}
+              {% assign profile_image_class = 'img-fluid z-depth-1 rounded-circle' %}
+            {% else %}
+              {% assign profile_image_class = 'img-fluid z-depth-1 rounded' %}
+            {% endif %}
+            {% capture sizes %}(min-width: {{ site.max_width }}) {{ site.max_width | minus: 30 | times: 0.3}}px, (min-width: 576px) 30vw, 95vw"{% endcapture %}
+            {% include figure.liquid path=profile_image_path class=profile_image_class sizes=sizes alt=page.profile.image cache_bust=true %}
+          {% endif %}
+          <div class="text">
+            <div class="header" style="margin-bottom: 1rem; text-align: left;">
+              <div class="name">
+                {% if site.title == 'blank' -%}
+                  <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
+                  {{ site.last_name }}
+                  {{ site.suffix }}
+                  </div>
+                {%- else -%}
+                  {{ site.title }}
+                {%- endif %}
+              </div>
+              {%- if page.profile.title %}
+                <div class="title">{{ page.profile.title }}</div>
+              {%- endif %}
+              {%- if page.profile.address %}
+                <div class="address">{{ page.profile.address }}</div>
+              {%- endif %}
+              <div class="contact-icons">{% include social.liquid %}</div>
+              <div class="contact-note">{{ site.contact_note }}</div>
             </div>
           </div>
         </div>
