--- a/_includes/research.liquid
+++ b/_includes/research.liquid
@@ -1,5 +1,5 @@
 <div class="publications">
-  <h2>selected research <a href="/research">(all)</a></h2>
+  <h2>research <a href="/research">(all)</a></h2>
 
   {% assign research-page = site.pages | where: 'title', 'research' | first %}
   {%- if research-page.interests %}
@@ -8,12 +8,12 @@
 
   {% if research-page.selected_papers %}
     <h4>publications</h4>
-    {% bibliography -f papers -q @*[selected=true]* %}
+    {% bibliography -f papers -q @*[include=true]* %}
   {% endif %}
 
   {% if research-page.selected_talks %}
     <h4>talks</h4>
-    {% bibliography -f talks -q @*[selected=true]* %}
+    {% bibliography -f talks -q @*[include=true]* %}
   {% endif %}
 
   {% if site.data.repositories.github_repos %}
