resources byline + styling

--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -4,10 +4,20 @@
 
 d-byline {
   border-top-color: var(--global-divider-color) !important;
+  font-size: 0.9rem !important;
 }
 
 d-byline h3 {
   color: var(--global-text-color) !important;
+  font-size: 0.75rem !important;
+  font-weight: 100 !important;
+  margin-bottom: 0.125rem !important;
+}
+
+d-byline p i {
+    // Resources icons
+    margin-right: 0.25rem !important;
+    font-size: 1rem !important;
 }
 
 d-byline a,
