--- a/_layouts/distill.liquid
+++ b/_layouts/distill.liquid
@@ -50,7 +50,7 @@
             }{% if page.resources %},
             "resources": [
               {% for r in page.resources %}
-              {"label": "{{ r.label }}", "url": "{{ r.url }}"}{% if forloop.last == false %},{% endif %}
+              {"label": "{{ r.label }}", "url": "{{ r.url }}", "icon": "{{ r.icon }}"}{% if forloop.last == false %},{% endif %}
               {% endfor %}
             ]
             {% endif %}
